# redito

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: cli.rs  commands.rs  connect.rs  lib.rs  main.rs  settings.rs
src/commands/: stream_copy.rs  stream_tail.rs
