[package]
name = "reto"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
figment = { version = "0.10.10", features = ["env", "json", "toml"] }
redis = { version = "0.30", features = ["aio", "sentinel", "tokio-comp", "tokio-rustls-comp", "tls-rustls-insecure"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.42.0", features = ["full", "tracing"] }
anyhow = "1"
