[package]
name = "redito"
version = "0.1.4"
edition = "2024"
repository = "https://github.com/felipou/redito"
description = "Redis Toolkit"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4.4.18", features = ["derive", "string", "cargo"] }
figment = { version = "0.10.10", features = ["env", "json", "toml"] }
schemars = "1"
redis = { version = "0.30", features = ["aio", "sentinel", "tokio-comp", "tokio-rustls-comp", "tls-rustls-insecure"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.42.0", features = ["full", "tracing"] }
anyhow = "1"

[profile.release]
strip = true
